# roa-texture-loader

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  details.yaml
.github/workflows/: cmake-single-platform.yml
include/: callback.h  config.h  func_ids.h  pack.h  pack_queue.h  packlist.h  riff.h  sound.h  sprite.h  ui.h  yaml_helper.h
src/: WICTextureLoader.cpp  callback.cpp  config.cpp  dllmain.cpp  func_ids.cpp  mod.h  pack.cpp  pack_queue.cpp  packlist.cpp  riff.cpp  sound.cpp  sprite.cpp  sprite.h  ui.cpp  ui.h
